Modify cloud run Dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,7 +5,7 @@ RUN pip install --upgrade pip
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r  requirements.txt
 
-ENV APP_HOME /root/app
+ENV APP_HOME /root/myapp
 WORKDIR $APP_HOME
 COPY / $APP_HOME
 
